# heim

./: README.md
examples/Rust/basic-rust-application/: Cargo.toml  application.toml  component.toml
examples/Rust/basic-rust-application/src/: lib.rs
examples/Rust/multi-path-application/: Cargo.toml  application.toml  component.toml
examples/Rust/multi-path-application/src/: lib.rs
heim-docs/: Cargo.toml  README.md  application.toml  component.toml
heim-docs/docs/: astro.config.mjs  package.json  pnpm-lock.yaml
heim-docs/docs/src/content/: config.ts
heim-docs/docs/src/content/components/: ImageCard.astro  ReleaseLinks.astro  include.astro
heim-docs/docs/src/content/docs/: index.mdx
heim-docs/docs/src/content/docs/application/: cron-job.mdx  deployment.mdx  http.mdx  index.mdx  job.mdx  limitations.mdx  long-running.mdx  workspace.mdx  workspaces.mdx
heim-docs/docs/src/content/docs/application/Config/: application.toml.mdx  capabilities.mdx  component.toml.mdx  environment-variables.mdx  triggers.mdx
heim-docs/docs/src/content/docs/cli/: cli-reference.mdx
heim-docs/docs/src/content/docs/config/: environment-variables.mdx  regions.mdx  triggers.mdx
heim-docs/docs/src/content/docs/guides/examples/: Basic-C-Application.mdx  Basic-Csharp-Application.mdx  Basic-Go-Application.mdx  Basic-Python-Application.mdx  Basic-Rust-Application.mdx  Basic-TypeScript-Application.mdx  Handling-multiple-paths in rust.mdx  Self-hosting.mdx  open-api-example.mdx  rust-job-application.mdx  workspace.mdx
heim-docs/docs/src/content/docs/organization/: access-logs.mdx  ci-tokens.mdx  limits.mdx  members.mdx  projects.mdx  settings.mdx
heim-docs/docs/src/content/docs/runtime/: config-file.mdx  configuration.mdx  environment-variables.mdx
heim-docs/docs/src/content/docs/start-here/: application-structure.mdx  getting-started.mdx  heim-portal.mdx  known-issues.mdx  templates.mdx
heim-docs/docs/src/content/docs/start-here/Installation/: index.mdx  linux.mdx  macos.mdx  windows.mdx
heim-docs/docs/src/content/docs/start-here/configuration/: application.toml.mdx  component.toml.mdx
heim-docs/docs/src/content/docs/templates/: built-in.mdx  openapi.mdx
heim-docs/docs/src/styles/: custom.css
heim-docs/src/: lib.rs
templates/c-http/: app.c  application.toml  component.toml  heim_template.toml
templates/csharp-http/: heim_template.toml
templates/csharp-http-async/: Program.cs  WasiEventLoop.cs  component.toml  heim_template.toml
templates/go-http/: .gitignore  application.toml  component.toml  heim_template.toml  main.go
templates/rust-http/: Cargo.toml  application.toml  heim_template.toml
templates/rust-http/src/: lib.rs
templates/rust-job/: .heimignore  Cargo.toml  README.md  application.toml  component.toml  heim_template.toml
templates/rust-job/src/: main.rs
(+114 files in other folders)
