[package]
name = "{{name}}"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "myorg:{{name}}"
proxy = false

[dependencies]
wstd = { version = "0.6.3", features = ["json"] }
wstd-axum = { version = "0.6.3" }
axum = { version = "0.8.8", default-features = false, features = [
    "query",
    "json",
    "macros",
] }

# reduce wasm binary size
[profile.release]
lto = true
strip = "symbols"
