[package]
name = "{{name}}"
version = "0.1.0"
edition = "2024"

[[bin]]
path = "src/main.rs"
name = "{{name | replace(from="-", to="_") }}"

[dependencies]
clap = { version = "4.5.50", features = [
    "derive",
    "deprecated",
    "cargo",
    "env",
] }
[target.'cfg(target_os = "wasi")'.dependencies]
wstd = { version = "0.6.3", features = ["json"] }

[target.'cfg(not(target_os = "wasi"))'.dependencies]
reqwest = { version = "0.12.23", features = ["json", "rustls-tls"] }
tokio = { version = "1.47.1", features = ["full"] }

# reduce wasm binary size
[profile.release]
lto = true
strip = "symbols"
